--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native": "^0.72.2",
     "@types/react-native-countdown-component": "^2.7.0",
+    "@types/react-native-indicators": "^0.16.2",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.5",
     "fbjs": "^3.0.4",
@@ -27,9 +28,11 @@
     "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-pdf": "^6.6.2",
+    "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
