--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-blob-util": "^0.17.3",
+    "react-native-check-version": "^1.1.1",
     "react-native-countdown-component": "^2.7.1",
+    "react-native-device-info": "^10.6.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-indicators": "^0.17.0",
@@ -35,6 +37,7 @@
     "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
