--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-countdown-component": "^2.7.1",
     "react-native-device-info": "^10.6.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-google-mobile-ads": "^11.1.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
