--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-native-indicators": "^0.16.2",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.5",
+    "chordsheetjs": "^8.1.0",
     "fbjs": "^3.0.4",
     "i18n-js": "^4.2.3",
     "react": "18.2.0",
