[Added] activated screen saver

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-google-mobile-ads": "^11.1.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-indicators": "^0.17.0",
+    "react-native-keep-awake": "^4.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-pdf": "^6.6.2",
@@ -53,6 +54,7 @@
     "@tsconfig/react-native": "^2.0.3",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.28",
+    "@types/react-native-keep-awake": "^2.0.3",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
