--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,3 +5,6 @@ includeBuild('../node_modules/react-native-gradle-plugin')
 
 include ':react-native-splash-screen'
 project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
+
+include ':react-native-keep-awake'
+project(':react-native-keep-awake').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-keep-awake/android')
