--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "i18n-js": "^4.2.3",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-blob-util": "^0.17.3",
     "react-native-check-version": "^1.1.1",
     "react-native-countdown-component": "^2.7.1",
