--- a/app.json
+++ b/app.json
@@ -3,6 +3,6 @@
   "displayName": "SarOakSin",
   "react-native-google-mobile-ads": {
     "android_app_id": "ca-app-pub-5673291811584669~2665308043",
-    "ios_app_id": "ca-app-pub-xxxxxxxx~xxxxxxxx"
+    "ios_app_id": "ca-app-pub-5673291811584669~5351504849"
   }
 }
