--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-indicators": "^0.17.0",
     "react-native-keep-awake": "^4.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-pdf": "^6.6.2",
     "react-native-reanimated": "^3.2.0",
@@ -47,7 +48,8 @@
     "react-native-webview": "^13.6.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
-    "toggle-switch-react-native": "^3.3.0"
+    "toggle-switch-react-native": "^3.3.0",
+    "uri-scheme": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
