--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.3.1",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/checkbox": "^0.5.15",
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/remote-config": "^18.8.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^2.1.0",
     "@types/react-native": "^0.72.2",
     "@types/react-native-countdown-component": "^2.7.0",
     "@types/react-native-indicators": "^0.16.2",
