--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,7 +23,11 @@ end
 
 target 'SarOakSin' do
   config = use_native_modules!
-
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseRemoteConfig', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'FirebaseABTesting', :modular_headers => true
+  pod 'FirebaseInstallations', :modular_headers => true
   # Flags change depending on the env values.
   flags = get_default_flags()
 
