--- a/ios/SarOakSin/Info.plist
+++ b/ios/SarOakSin/Info.plist
@@ -75,6 +75,10 @@
 		<string>Pyidaungsu.ttf</string>
 		<string>Pyidaungsu-Bold.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
